# ofia

./: .gitignore  CMakeLists.txt  build.bat  imgui.ini
assets/models/: cube.fbx
assets/shaders/: basic.glsl
assets/shaders/frag/: fbo.frag
assets/shaders/glsl/: basic.glsl  default.glsl  depth.glsl
assets/shaders/vert/: render.vert
include/ofia/: application.hpp  debug.hpp  ofia.h
include/ofia/headers/: assetloader.hpp  camera.hpp  mesh.hpp  model.hpp  platform.hpp  quad.hpp  scene.hpp  shader.hpp  texture.hpp
include/ofia/headers/buffers/: ebo.hpp  fbo.hpp  sbo.hpp  vao.hpp  vbo.hpp
include/ofia/headers/components/: component.hpp  gameobject.hpp  light.hpp  meshfilter.hpp  meshrenderer.hpp  transform.hpp
include/ofia/utils/: gl_error_check.hpp
src/: application.cpp  main.cpp
src/core/: camera.cpp  framebuffer.cpp  platform.cpp  scene.cpp  shader.cpp  shadowbuffer.cpp  texture.cpp  transform.cpp
